# dotfiles

./: .Xdefaults  .Xmodmap  .Xresources  .bash_profile  .bashrc  .bashrc_develop  .bvirc  .chunkwmrc  .clinerules  .ctags  .gdbinit  .ghci  .gitconfig  .gitignore  .gitignore_global  .gitmessage  .gitmodules  .gvimrc  .haskeline  .inputrc  .irbrc  .nvimrc  .sbtrc  .screenrc  .screenrc_root  .sshrc  .stylish-haskell.yaml  .textlintrc  .tmux.conf  .tmux.conf-2.3  .vimperatorrc  .vimrc  .vimrc_env  .vimshrc  .vintrc.yml  .vrapperrc  .vsvimrc  .xinitrc  .xinitrc_BlueAloha  .xinitrc_MetalManArch  (+31 more)
.bashfiles/: README.md
.claude/: settings.json
.claude_global/: CLAUDE.md  README.md  settings.json  settings.local.json
.config/: kritarc  kritashortcutsrc  nvim
.config/yi/: CmdOptions.hs  Main.hs  package.yaml  stack.yaml  yi-config.cabal  yi.hs
.config/yi/Yi/MyConfig/: CmdOptions.hs  Helper.hs
.copilot/: README.md  copilot-instructions.md
.ctags.d/: .gitignore  elm.ctags  kotlin.ctags  markdown.ctags  review.ctags  scala.ctags  swift.ctags  typescript.ctags  vue.ctags
.domterm/: settings.ini
.gemini_global/: README.md  settings.json
.gonvim/: gonvimrc  setting.toml
.hammerspoon/: init.lua
.lein/: profiles.clj
.screenlayout/: casual.sh  top-bottom.sh
.sh_generic/: README.md  aliases.sh  completion.sh  cygwin.sh  helper.sh  linux.sh  macOS.sh  neovim_utils.sh  premise.sh  vars.sh  vim_utils.sh  wsl.sh
.shells/: aliases.sh  linux.sh  macOS.sh  premise.sh  vars.sh
.sshrc.d/: .bashfiles  .sh_generic  .tmux.conf  .tmux.conf-2.3  .vimrc
.stack/: config.yaml
.vim/: .clinerules  .gitignore  dein-neovim.toml  dein-wsl.toml  dein.toml  dein_lazy.toml  en.utf-8.add  ginit.vim  how_to_use_in_windows_kaoriya_gvim.md  init.vim
.w3m/: config
.weechat/: alias.conf
.xmonad/: README.md  XMonadRecompile.hs  stack.yaml  xmonad-config.cabal  xmonad.hs
.xmonad/XMonadConfig/: Actions.hs  CommandWrapper.hs  Shelly.hs  Types.hs
.zsh/: .gitignore  .zcompdump  .zprofile  .zshenv  .zshrc  .zshrc.keymap
Examples/: .bash_meta_profile  .bash_profile_env  .vimrc_env  _gvimrc  (+3 more)
(+1410 files in other folders)
