name:                xmonad-config
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/aiya000/xmonad-config#readme
license:             BSD3
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-config
  hs-source-dirs:      .
  main-is:             xmonad.hs
  default-language:    Haskell2010
  other-modules:       XMonadConfig.CommandWrapper
                     , XMonadConfig.Shelly
                     , XMonadConfig.Types
  build-depends:       base >= 4.7 && < 5
                     , easy-file
                     , extra
                     , shelly
                     , text
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras

executable xmonad-config-recompile
  hs-source-dirs:      .
  main-is:             XMonadRecompile.hs
  default-language:    Haskell2010
  build-depends:       base
                     , easy-file
                     , filepath
                     , shelly
                     , text
