name:                yi-config
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/aiya000/dotfiles
license:             BSD3
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           2016 aiya000
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable yi-config
  main-is:             yi.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , yi
  ghc-options: -Wall -ferror-spans -threaded
